--- a/styles.css
+++ b/styles.css
@@ -177,7 +177,7 @@ footer a:hover {
 
 /*Media Queries */
 /*Small Devices*/
-@media only screen and (max-width: 420px) {
+@media only screen and (min-width: 300px) and (max-width: 759px) {
   #landing {
     background-image: url("./media/rodger-full.png");
     background-size: 100%;
@@ -221,8 +221,8 @@ footer a:hover {
   }
 }
 
-/*Tablets*/
-@media only screen and (max-width: 770px) {
+/*Tablet Portrait*/
+@media only screen and (min-width: 760px) and (max-width: 999px) {
   #landing {
     background-image: url("./media/rodger-full.png");
     background-size: 100%;
@@ -262,6 +262,72 @@ footer a:hover {
   #about button {
     font-size: 1.5em;
   }
+  iframe {
+    width: 80%;
+  }
+}
+
+/*Large Tablets & Landscape*/
+@media only screen and (min-width: 1000px) and (max-width: 1400px) {
+  #landing {
+    background-image: url("./media/rodger-full.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    height: 70vh;
+  }
+}
+
+@media only screen and (min-width: 1000px) and (max-width: 1400px) and (max-height: 770px) {
+  #landing {
+    height: 120vh;
+  }
+}
+
+@media only screen and (min-width: 1000px) and (max-width: 1400px) {
+  #landing h1 {
+    font-size: 3em;
+    margin-top: 5em;
+  }
+  #landing p {
+    font-size: 2em;
+  }
+  #landing button {
+    font-size: 1.5em;
+  }
+  #landing .land-img-box {
+    display: none;
+  }
+  #about {
+    background-image: url("./media/rodger-about.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    height: 130vh;
+  }
+  #about .about-img-box {
+    display: none;
+  }
+  #about .about-text {
+    width: 100%;
+  }
+  #about h1 {
+    font-size: 3em;
+  }
+  #about p {
+    font-size: 2em;
+    margin-top: 15em;
+  }
+  #about button {
+    font-size: 1.5em;
+  }
+}
+
+@media only screen and (min-width: 1000px) and (max-width: 1400px) and (max-height: 770px) {
+  #about {
+    height: 250vh;
+  }
+}
+
+@media only screen and (min-width: 1000px) and (max-width: 1400px) {
   iframe {
     width: 80%;
   }
