--- a/styles.scss
+++ b/styles.scss
@@ -167,7 +167,7 @@ footer {
 /*Media Queries */
 
 /*Small Devices*/
-@media only screen and (max-width: 420px) {
+@media only screen and (min-width: 300px) and (max-width: 759px) {
   #landing {
     background-image: url("./media/rodger-full.png");
     background-size: 100%;
@@ -212,8 +212,8 @@ footer {
   }
 }
 
-/*Tablets*/
-@media only screen and (max-width: 770px) {
+/*Tablet Portrait*/
+@media only screen and (min-width: 760px) and (max-width: 999px) {
   #landing {
     background-image: url("./media/rodger-full.png");
     background-size: 100%;
@@ -252,6 +252,61 @@ footer {
     }
     button {
       font-size: 1.5em;
+    }
+  }
+  iframe {
+    width: 80%;
+  }
+}
+
+/*Large Tablets & Landscape*/
+@media only screen and (min-width: 1000px) and (max-width: 1400px) {
+  #landing {
+    @media only screen and (max-height: 770px) {
+      height: 120vh;
+    }
+    background-image: url("./media/rodger-full.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    height: 70vh;
+    h1 {
+      font-size: 3em;
+      margin-top: 5em;
+    }
+    p {
+      font-size: 2em;
+    }
+    button {
+      font-size: 1.5em;
+    }
+    .land-img-box {
+      display: none;
+    }
+  }
+
+  #about {
+    background-image: url("./media/rodger-about.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    height: 130vh;
+    .about-img-box {
+      display: none;
+    }
+    .about-text {
+      width: 100%;
+    }
+    h1 {
+      font-size: 3em;
+    }
+    p {
+      font-size: 2em;
+      margin-top: 15em;
+    }
+    button {
+      font-size: 1.5em;
+    }
+    @media only screen and (max-height: 770px) {
+      height: 250vh;
     }
   }
   iframe {
